# final-nn

./: autoencoder.html  autoencoder.ipynb  pyproject.toml  requirements.txt  tf_binding.html  tf_binding.ipynb
.github/workflows/: test.yml
neural/: __init__.py  nn.py  preprocess.py
test/: test_nn.py
