[build-system]
requires = [
	"flit_core >=3.2,<4",
	"python_version >='3.7'"
	]
build-backend = "flit_core.buildapi"

[project]
name = "nn"
authors = [{name = "Sandy Floren", email = "alexander.floren@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pytest", 
	"numpy",
    "matplotlib",
    "sklearn"
]

[project.urls]
Home = "https://github.com/sandyfloren/FINAL-NN"